# LingmoOS-Release

./: README.md  apt-source.list  settings
LingmoUI/: CMakeLists.txt  CuteUIConfig.cmake.in  README.md
LingmoUI/debian/: changelog  control  copyright
LingmoUI/src/: CMakeLists.txt  cuteui.cpp  cuteui.h  cuteui.qrc  thememanager.cpp  thememanager.h
appmotor/: .gitignore  CMakeLists.txt  COPYING.LESSER  README.md
appmotor/debian/: changelog  control
appmotor/doc/: advancedapplauncherd.dox  dbus.dox  debug.dox  doxygen-impldoc.conf  doxygen-mdeclarativecache.conf  doxygen-userdoc.conf  eboost.dox  invokerparameters.dox  limitations.dox  mainpage.dox  mdeclarativecache_mainpage.dox  qmlboost.dox  qtboost.dox  singleinstance.dox  tipsandtricks.dox  usingcmake.dox  usingpkgconfig.dox  usingqmake.dox
appmotor/scripts/: booster-cgroup-mount  libraries_meego.py  library-helper.py
appmotor/src/: CMakeLists.txt
calculator/: CMakeLists.txt  README.md  calcengine.cpp  calcengine.h  cute-calculator.desktop  main.cpp  qml.qrc
calculator/debian/: changelog  control  copyright
calculator/engine/: constants.cpp  constants.h  evaluator.cpp  evaluator.h  functions.cpp  functions.h  hmath.cpp  hmath.h  number.c  number.h  opcode.h
calculator/qml/: StandardButton.qml  StandardPad.qml  Zone.qml  main.qml
calculator/translations/: en_US.ts  zh_CN.ts
daemon/: CMakeLists.txt  README.md
daemon/debian/: changelog  control  rules
daemon/src/: application.cpp  application.h  appmanager.cpp  appmanager.h  com.cute.AppManager.xml  com.cute.Daemon.conf  com.cute.Daemon.service  cute-getfastmirror  cute-permission-surveillance  main.cpp
daemon/translations/: en_US.ts  zh_CN.ts
debinstaller/: CMakeLists.txt  README.md  cute-debinstaller.desktop  qml.qrc
debinstaller/cmake/: FindAptPkg.cmake
debinstaller/debian/: changelog  control  copyright  postinst
debinstaller/qml/: AppPage.qml  HomePage.qml  InstallPage.qml  main.qml
debinstaller/src/: debinstaller.cpp  debinstaller.h  main.cpp
debinstaller/translations/: en_US.ts  fr_FR.ts  zh_CN.ts
desktop/: CMakeLists.txt  desktop.cpp  desktop.h  main.cpp  qml.qrc
desktop/debian/: changelog  control  copyright
desktop/desktop/: desktopsettings.cpp  desktopsettings.h  desktopview.cpp  desktopview.h  dockdbusinterface.cpp  dockdbusinterface.h
desktop/qml/: FolderGridItem.qml  GlobalSettings.qml  Main.qml  Wallpaper.qml
desktop/thumbnailer/: thumbnailcache.h
filemanager/: CMakeLists.txt  README.md  application.cpp  application.h  com.cute.FileManager.xml  cute-filemanager.desktop  dbusinterface.cpp  main.cpp  qml.qrc  window.h
filemanager/debian/: changelog  control  copyright
filemanager/dragdrop/: CMakeLists.txt  plugin.cpp  qmldir
filemanager/filemanager/: CMakeLists.txt  desktopiconprovider.cpp  desktopiconprovider.h  plugin.cpp  qmldir  window.cpp
filemanager/qml/: FolderGridView.qml  FolderListItem.qml  FolderListView.qml  FolderPage.qml  GlobalSettings.qml  OptionsMenu.qml  PathBar.qml  SideBar.qml  main.qml
filemanager/thumbnailer/: thumbnailcache.cpp  thumbnailprovider.cpp  thumbnailprovider.h
filemanager/translations/: ar_AA.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  lv_LV.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  sr_RS.ts  sv_SE.ts  sw.ts  ta_IN.ts  tr_TR.ts  (+4 more)
kwin-plugins/: .gitignore  CMakeLists.txt  README.md
kwin-plugins/config/: kglobalshortcutsrc  kwinrc  kwinrulesrc
kwin-plugins/debian/: changelog  control  copyright
kwin-plugins/plugins/: CMakeLists.txt
launcher/: CMakeLists.txt  README.md  qml.qrc
launcher/debian/: changelog  control  copyright
launcher/qml/: AllAppsView.qml  GridItemDelegate.qml  main.qml
launcher/src/: appitem.cpp  appitem.h  applicationlistmodel.cpp  applicationlistmodel.h  appmanager.cpp  appmanager.h  basemodel.cpp  basemodel.h  basemodel_p.h  com.cute.Launcher.xml  desktopproperties.cpp  iconitem.cpp  iconitem.h  iconthemeimageprovider.cpp  iconthemeimageprovider.h  launcher.cpp  launcher.h  launchermodel.cpp  launchermodel.h  listmodelmanager.cpp  listmodelmanager.h  main.cpp  pagemodel.cpp  pagemodel.h  processprovider.cpp  type.h  ucunits.cpp  ucunits.h
launcher/translations/: ar_AA.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  lv_LV.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  sr_RS.ts  sv_SE.ts  sw.ts  ta_IN.ts  tr_TR.ts  (+4 more)
libcute/: .gitignore  CMakeLists.txt  README.md
libcute/accounts/: CMakeLists.txt  accountsmanager.cpp  accountsmanager.h  accountsmanager_p.h  org.freedesktop.Accounts.User.xml  qmldir  qmlplugins.cpp  useraccount.cpp  useraccount.h  useraccount_p.h  usersmodel.cpp  usersmodel.h  usersmodel_p.h
libcute/audio/: CMakeLists.txt  context.cpp  debug.cpp
libcute/bluez/: CMakeLists.txt  DevicesModel.qml  (+17 more)
screenlocker/: CMakeLists.txt  ConfigureChecks.cmake  README.md  config-X11.h.cmake  config-screenlocker.h.cmake  config-workspace.h.cmake
screenshot/: CMakeLists.txt  README.md  cute-screenshot.desktop  qml.qrc
sddm-theme/: CMakeLists.txt  FishUIMenu.qml  FishUIMenuItem.qml  Main.qml  README.md  SessionMenu.qml  UserView.qml  hidpi.conf  sddm.conf  theme.conf
settings/: CMakeLists.txt  README.md  ling-settings.desktop
statusbar/: CMakeLists.txt  README.md  qml.qrc
terminal/: .gitignore  CMakeLists.txt  README.md  cute-terminal.desktop
texteditor/: CMakeLists.txt  README.md  cute-texteditor.desktop  qml.qrc
updator/: CMakeLists.txt  FinishedPage.qml  HomePage.qml  README.md  UpdatePage.qml  UpdatingPage.qml  ling-updator.desktop  main.cpp  main.qml  qml.qrc  updatorhelper.cpp  updatorhelper.h  upgradeablemodel.cpp  upgradeablemodel.h
(+1000 files in other folders)
